# PiicoDev-Projects

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  main.py  pyproject.toml
bin_lights/: bin.py  config.py  main.py  utils.py
src/: bin_lights.py  clock.py  config.py  main.py  temperature_screen.py  utils.py
